--- a/buitenland/index.html
+++ b/buitenland/index.html
@@ -47,43 +47,56 @@
                     <span>Conclusie</span>
                 </li>
             </a>
-            <a href="">
-                <li id="float-right">
-                    <span>Contact</span>
-                </li>
-            </a>
         </ul>
     </nav>
     <main id="content">
-		<div id="cool">
-			<h2> Zonne energie in het buitenland </h2>
-			<h3> Saudi-Arabië </h3>
-			<P>
-			Saudi-Arabië is erg druk bezig in de zonne-energie branche ze zijn zelfs van plan om twee zonneparken in het noorden van het land te bouwen. Het belang van Saudi -Arabië is het verkleinen van hun grootte  afhankelijkheid van olie.  De economie is erg afhankelijk van fossiele brandstoffen en Saudi -Arabië wil de afhankelijkheid  verminderen. 
-			<br><br>
-			De ontwikkeling van deze projecten helpen Saudi-Arabië hier bij. Dit willen zij bereiken met samen te gaan met Japanse investering bedrijf soft bank. Het doel is om 200 gigawatt  aan energie op te wekken per 2030. in vergelijking met Nederland die jaarlijks 2,7 gigawatt aan stroom opwekt is dit een heel groot project  Dit is bijna gelijk aan 10 procent van de totale stroom capaciteit van het gehele land Saudi- Arabier.
-			<br><br>
-			Dit jaar is de start van de bouw van het zonnepark, volgend jaar zouden de zonnepanelen energie moeten leveren . binnen een paar jaar wilt het land ook zelf zonnepanelen  produceren. 
-			</p>
-			<h3> Dubai </h3>
-			<p>
-			Dubai is ook drukbezig met zonne-energie projecten. Dubai ’s doel is om een hoge zonne-energie toren te bouwen. Het project moet in het midden van het ‘’Mohammed bin Rashid’’  zonne-park komen te staan. De toren krijgt ongeveer de hoogte van 260 meter’. De bouw van het zonnen park zelf begon in 2013 hier bevinden zich nu 2,3 miljoen zonnen panelen . bij elkaar hebben de zonnepanelen nu  200mw dit is pas een klein deel van het doel dat Dubai in 2030 wilt bereiken 500mw. Met een oppervlakte van maar liefst 214 vierkant kilometer. 
-			</p>
-			<h3> Nederland </h3>
-			<p>
-			Nederland heeft plannen voor een drijvend Zonne park, dit soort projecten hebben veel voordelen. Drijvend op het water oppervlakte kunnen de zonnen panelen door middel van rotatie een betere plek tot de zon te vinden. De reflectie van het zon licht en het koelende effect van het water zorgen voor een veel hogeren  inkomsten . ook blijken Zonne parken op het water een goede oplossing te zijn voor ruimte gebrek op het land. 
-			<br><br>
-			Nu zijn er een paar plannen  die waarschijnlijk in Nederland bijvoorbeeld  waar worden gemaakt. De ideeën voor een project op het IJsselmeer. De panelen in het IJsselmeer zouden tientallen maar zelfs ook een paar honderd mw op kunnen leveren. Ook de  ‘de slufter’ heeft plannen het drijvende zonnepark zal de rond de 85 MW op kunnen leveren.
-			</p>
-			<h3> Landen realiseerden dit</h3>
-			<p>
-			Engeland heeft al 6 van deze drijvende zonneparken gerealiseerd. Japan is toch echt de koploper met maar liefst 45   drijvende projecten. De economie is hier minder afhankelijk van fossiele brandstoffen omdat er meer energie word op gewekt uit duurzame projecten. De zon is namelijk gratis we denken dat veel mensen hier voldoening uit kunnen halen dit zal beter zijn oor de mens en het milieu. 
-			</p>
+        <h1>Zonne energie in het buitenland</h1>
+        <h2>Saudi-Arabië</h2>
+        <p>
+        Saudi-Arabië is erg druk bezig in de zonne-energie branche ze zijn zelfs van plan om twee zonneparken in het noorden van het land te bouwen. 
+        Het belang van Saudi-Arabië is het verkleinen van hun grootte afhankelijkheid van olie. 
+        De economie is erg afhankelijk van fossiele brandstoffen en Saudi-Arabië wil de afhankelijkheid  verminderen. 
+        <br><br>
+        De ontwikkeling van deze projecten helpen Saudi-Arabië hier bij. 
+        Dit willen zij bereiken met samen te gaan met Japanse investering bedrijf Soft Bank. 
+        Het doel is om 200 gigawatt aan energie op te wekken per 2030. 
+        In vergelijking met Nederland die jaarlijks 2,7 gigawatt aan stroom opwekt is dit een heel groot project. 
+        Dit is bijna gelijk aan 10 procent van de totale stroom capaciteit van het gehele land Saudi-Arabier.
+        <br><br>
+        Dit jaar is de start van de bouw van het zonnepark, volgend jaar zouden de zonnepanelen energie moeten leveren . binnen een paar jaar wilt het land ook zelf zonnepanelen  produceren. 
+        </p>
+        <h2>Dubai</h2>
+        <p>
+        Dubai is ook drukbezig met zonne-energie projecten. Dubai’s doel is om een hoge zonne-energie toren te bouwen. 
+        Het project moet in het midden van het ‘’Mohammed bin Rashid’’  zonne-park komen te staan.
+        De toren krijgt ongeveer de hoogte van 260 meter. 
+        De bouw van het zonnen park zelf begon in 2013 hier bevinden zich nu 2,3 miljoen zonnen panelen. 
+        Bij elkaar hebben de zonnepanelen nu 200mw dit is pas een klein deel van het doel dat Dubai in 2030 wilt bereiken 500mw. 
+        Met een oppervlakte van maar liefst 214 vierkant kilometer. 
+        </p>
+        <h2>Nederland</h2>
+        <p>
+        Nederland heeft plannen voor een drijvend zonne park, dit soort projecten hebben veel voordelen. 
+        Drijvend op het water oppervlakte kunnen de zonnen panelen door middel van rotatie een betere plek tot de zon te vinden. 
+        De reflectie van het zon licht en het koelende effect van het water zorgen voor een hogere inkomsten. 
+        Ook blijken Zonne parken op het water een goede oplossing te zijn voor ruimte gebrek op het land. 
+        <br><br>
+        Nu zijn er een paar plannen die waarschijnlijk in Nederland bijvoorbeeld waar worden gemaakt. 
+        De ideeën voor een project op het IJsselmeer. 
+        De panelen in het IJsselmeer zouden tientallen maar zelfs ook een paar honderd mw op kunnen leveren. 
+        Ook de  ‘de slufter’ heeft plannen het drijvende zonnepark zal de rond de 85 MW op kunnen leveren.
+        </p>
+        <h2> Landen realiseerden dit</h2>
+        <p>
+        Engeland heeft al 6 van deze drijvende zonneparken gerealiseerd. 
+        Japan is toch echt de koploper met maar liefst 45 drijvende projecten. 
+        De economie is hier minder afhankelijk van fossiele brandstoffen omdat er meer energie word op gewekt uit duurzame projecten. De zon is namelijk gratis we denken dat veel mensen hier voldoening uit kunnen halen dit zal beter zijn oor de mens en het milieu. 
+        </p>
     </main>
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Jan Bart Neerhoff</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
