--- a/conclusie/index.html
+++ b/conclusie/index.html
@@ -48,33 +48,29 @@
                     <span>Conclusie</span>
                 </li>
             </a>
-            <a href="">
-                <li id="float-right">
-                    <span>Contact</span>
-                </li>
-            </a>
         </ul>
     </nav>
     <main id="content">
-		<div id="Conclusie">
-			<br> 
-			<h2> Conclusie </h2>
-			<p>
-			De Zonne-markt is een grote markt met veel ontwikkelingen, die maar blijven komen. 
-			De vraag is of je thuis zonnepanelen legt en een groot bedrag neerlegt en die dan 25 jaar werkend hebt, of investeert in een bedrijf die zorgt dat hun panelen altijd up-to-date heeft en dat jij dan geen panelen thuis hebt. 
-			<br>
-			Dat is naar onze mening de overweging die je moet nemen mocht je denken aan zonne-energie. beide is een goede investering naar onze mening, zeker aangezien dat de markt voor groene duurzame energie groter wordt.
-			</p><h2> Onze Mening </h2><p>
-			Onze mening is vooral dat je zelf de voor en nadelen moet vergelijken zodat je weet hoe je duurzaam de toekomst in gaat want in onze mening is dat de markt steeds groter wordt en dat hij ook een steeds grotere impact krijgt op onze levens, zeker doordat critici het een van de oplossingen vinden van de stijgende broeikast effecten op de aarde.
-			<br> <br>
-			één ding is in ieder geval zeker, en dat is dat deze markt niet stil staat en dat hij nog voor een hele lange tijd non stop blijft ontwikkelen. En of je nou een deel wilt zijn of niet, de ontwikkeling is niet te stoppen en zal zich constant voort doen.
-			</p>
-			
+        <h1>Conclusie</h1>
+        <p>
+        De Zonne-markt is een grote markt met veel ontwikkelingen, die maar blijven komen. 
+        De vraag is of je thuis zonnepanelen legt en een groot bedrag neerlegt en die dan 25 jaar werkend hebt, of investeert in een bedrijf die zorgt dat hun panelen altijd up-to-date heeft en dat jij dan geen panelen thuis hebt. 
+        <br>
+        Dat is naar onze mening de overweging die je moet nemen mocht je denken aan zonne-energie. 
+        Beide is een goede investering naar onze mening, zeker aangezien dat de markt voor groene duurzame energie groter wordt.
+        </p>
+        <h2>Onze Mening</h2>
+        <p>
+        Onze mening is vooral dat je zelf de voor en nadelen moet vergelijken zodat je weet hoe je duurzaam de toekomst in gaat want in onze mening is dat de markt steeds groter wordt en dat hij ook een steeds grotere impact krijgt op onze levens, zeker doordat critici het een van de oplossingen vinden van de stijgende broeikast effecten op de aarde.
+        <br><br>
+        Één ding is in ieder geval zeker, en dat is dat deze markt niet stil staat en dat hij nog voor een hele lange tijd non stop blijft ontwikkelen. 
+        En of je nou een deel wilt zijn of niet, de ontwikkeling is niet te stoppen en zal zich constant voort doen.
+        </p>
     </main>
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Naam</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
