--- a/markt/index.html
+++ b/markt/index.html
@@ -32,12 +32,12 @@
                     <span>Toekomst</span>
                 </li>
             </a>
-			<a href="../markt">
+			<a href="./../buitenland">
                 <li>
                     <span>Buitenland</span>
                 </li>
             </a>
-            <a href="">
+            <a href="./">
                 <li class="current-page">
                     <span>Markt</span>
                 </li>
@@ -47,33 +47,30 @@
                     <span>Conclusie</span>
                 </li>
             </a>
-            <a href="">
-                <li id="float-right">
-                    <span>Contact</span>
-                </li>
-            </a>
         </ul>
     </nav>
     <main id="content">
-		<div id="Tekst">
-			<br><br>
-			<H2> De Zonne-Markt</H2>
-			<h2> Hoe is het met de Economie? </h2>
-			<P>
-			Zonne-energie word steeds belangrijker, het is  goed voor het milieu, aangezien de aarde opwarmt en de fossiele brandstof opraakt . Ook wordt voor je portemonnee zonne-energie steeds aantrekkelijker en goedkoper. In sommige landen is zonne-energie goedkoper dan fossiel opgewekte elektriciteit ( olie of steenkool gestookte centrales ). De economie van zonne-energie gaat goed want veel landen willen op duurzame energie overstappen.<br><br>
-			Het gaat een stuk beter met de zonne-energie in Nederland. Het afgelopen jaar zijn er 3,1 miljoen zonnepanelen bijgekomen, de opbrengst van zonne-energie  groeide met meer dan 60 procent. Net iets minder dan de helft van die nieuwe zonnepanelen is aangeschaft door particulieren de rest door bedrijven.<br><br>
-			De enorme groei komt door de aanhoudende daling van de prijs van zonnepanelen, de zonnepanelen komen tegenwoordig vooral uit Vietnam en China. Vorig jaar daalde de prijs met bijna 25 procent. Maar de belangrijkste reden voor de snelle groei is het mooie en zekere rendement wat je met zonnepanelen te bereiken is. Volgens Milieu Centraal is het rendement op zonnepanelen voor particulieren rond de 6 procent per jaar. Daarmee is de investering waarmee je zonnepanelen komt in ruim zes jaar terug te verdienen. Ook geeft de overheid voor particulieren  subsidie en is er de mogelijkheid om de BTW terug te krijgen.
-			</p>
-			<h2> Kleinschalige </h2><P>
-			Voor huishoudens word het ook steeds interessanter om zonnepanelen te nemen door de saldering. Wat is salderen? Het gaat als volgt: Op je energierekening staat hoeveelheid energie die je geleverd hebt gekregen van het energiebedrijf. Dat staat vermeld in kWh. 
-			<br><br>Daarvan wordt de energie die je hebt op gewekt door de zonnepanelen afgetrokken. Dat wat overblijft betaal je dan .
-			<br><br> Maar aan de het salderen zitten ook weer bepaalde haken en ogen aan. Niet alle energie die je terug levert telt mee voor het salderen. Er is een bepaalde grens gesteld. Dat noemen we ook wel de salderingsgrens. Je moet wel de elektriciteit via dezelfde aansluiting terug leveren als waarmee het jouw energiebedrijf je de elektriciteit levert. Alleen dan is er spraken van saldering. Alleen de saldering zal in 2020 worden aangepast door overheid. 
-			</p>
+        <h1>De Zonne-Markt</h1>
+        <h2> Hoe is het met de economie?</h2>
+        <p>
+        Zonne-energie word steeds belangrijker, het is  goed voor het milieu, aangezien de aarde opwarmt en de fossiele brandstof opraakt . Ook wordt voor je portemonnee zonne-energie steeds aantrekkelijker en goedkoper. In sommige landen is zonne-energie goedkoper dan fossiel opgewekte elektriciteit ( olie of steenkool gestookte centrales ). De economie van zonne-energie gaat goed want veel landen willen op duurzame energie overstappen.<br><br>
+        Het gaat een stuk beter met de zonne-energie in Nederland. Het afgelopen jaar zijn er 3,1 miljoen zonnepanelen bijgekomen, de opbrengst van zonne-energie  groeide met meer dan 60 procent. Net iets minder dan de helft van die nieuwe zonnepanelen is aangeschaft door particulieren de rest door bedrijven.
+        <br><br>
+        De enorme groei komt door de aanhoudende daling van de prijs van zonnepanelen, de zonnepanelen komen tegenwoordig vooral uit Vietnam en China. Vorig jaar daalde de prijs met bijna 25 procent. Maar de belangrijkste reden voor de snelle groei is het mooie en zekere rendement wat je met zonnepanelen te bereiken is. Volgens Milieu Centraal is het rendement op zonnepanelen voor particulieren rond de 6 procent per jaar. Daarmee is de investering waarmee je zonnepanelen komt in ruim zes jaar terug te verdienen. Ook geeft de overheid voor particulieren  subsidie en is er de mogelijkheid om de BTW terug te krijgen.
+        </p>
+        <h2>Kleinschalige</h2>
+        <p>
+        Voor huishoudens word het ook steeds interessanter om zonnepanelen te nemen door de saldering. Wat is salderen? Het gaat als volgt: Op je energierekening staat hoeveelheid energie die je geleverd hebt gekregen van het energiebedrijf. Dat staat vermeld in kWh. 
+        <br><br>
+        Daarvan wordt de energie die je hebt op gewekt door de zonnepanelen afgetrokken. Dat wat overblijft betaal je dan. 
+        <br><br>
+        Maar aan de het salderen zitten ook weer bepaalde haken en ogen aan. Niet alle energie die je terug levert telt mee voor het salderen. Er is een bepaalde grens gesteld. Dat noemen we ook wel de salderingsgrens. Je moet wel de elektriciteit via dezelfde aansluiting terug leveren als waarmee het jouw energiebedrijf je de elektriciteit levert. Alleen dan is er spraken van saldering. Alleen de saldering zal in 2020 worden aangepast door overheid. 
+        </p>
     </main>
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Naam</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
