--- a/rendement/index.html
+++ b/rendement/index.html
@@ -47,21 +47,15 @@
                     <span>Conclusie</span>
                 </li>
             </a>
-            <a href="">
-                <li id="float-right">
-                    <span>Contact</span>
-                </li>
-            </a>
         </ul>
     </nav>
     <main id="content">
-	<div id="test">
-		<h2 id="titel">Rendement van Zonne-energie</h2>
-		<p>
-        Zit u te denken aan het plaatsen van zonnepanelen maar weet u niet zo zeker of het het wel waard is (in euro's gesproken)? Daarvoor hebben wij hier voor u alle kosten en inkomsten op een rijtje gezet en kunt u het makkelijk zien en bereken zodat u een toekomstgerichte keuze kan maken en een investering in de toekomst doen, Op de groene en winstgevende manier. 
+		<h1>Rendement van Zonne-energie</h1>
+		<p>Zit u te denken aan het plaatsen van zonnepanelen maar weet u niet zo zeker of het het wel waard is (in euro's gesproken)? 
+        Daarvoor hebben wij hier voor u alle kosten en inkomsten op een rijtje gezet en kunt u het makkelijk zien en bereken zodat u een toekomstgerichte keuze kan maken en een investering in de toekomst doen, Op de groene en winstgevende manier.
         <br><br>
 		We nemen de 2 meest voorkomende soorten zonnepanelen in vergelijking, met elk zijn voordeel en nadelen.
-        Hiervoor hebben wij de kosten;
+        Hiervoor hebben wij de kosten:
         </p>
 		<ul class="ul">
 			<li>Monokristallijn; zijn duurder, door de donkerblauwe kleur vinden mensen het de mooiste en hebben het hoogste rendement door de stabiele stroom (tijdens bewolking of temperatuur verschillen)</li>
@@ -89,7 +83,7 @@
 		Per 25 jaar met een gemiddelde particuliere installatie van 12 panelen van 1,63 M2 en een omvormer met monitoringsprogramma (en inclusief als je het geld op een spaar deposito en rentevaste rekening van 2,00%) kom je uit op
 		€9.351,45
 		</p>
-		<h2 id="titel">Opbrengsten</h2>
+		<h2>Opbrengsten</h2>
 		<p>
 	 	Zonnepanelen maken van straling die de zon afgeeft energie, dit klinkt lastig en is ook    s 	wel duur maar over tijd kan het rendabel zijn, er hoeft niet eens perse altijd zon te  a a	zijn om de kosten te onderdrukken.
          <br><br>
@@ -101,17 +95,15 @@
             <li>Btw terugvragen </li>
             <li>Huiswaarde stijgt</li>
         </ul>
-        <h3>Waardestijging</h3> 
+        <h2>Waardestijging</h2> 
         <p>
 		De waardestijging van een huis wordt meestal vergeten bij het overwegen van zonnepanelen, terwijl de stijging er zeker is, maar alleen lastig in te schatten.
 		Bij een onderzoek van <a href="degroenebron.nl">degroenebron.nl</a> hebben ze 92 mensen met panelen ondervraagd, bij wie van de mensen zeggen dat hun huis in waarde steeg, waarbij van die 3 kwart ongeveer 70% zei dat hun huis of de waarde van de installatie of a	meer dan de waarde van de installatie heeft toegevoegd aan hun huis.
 		Gemiddeld gezien is tussen de helft en de volledige waarde van het huis toegevoegd.
 		In ons geval van de 12 panelen is dat dan ongeveer (5.700 X 0.75) = €4.275,-
-        
-        <h3>Subsidies en Btw</h3>
+        <h2>Subsidies en Btw</h2>
         <p>Als particulier kan je voor zonnepanelen de btw van de aanschaf en installatie (wat 21% is) terugvragen bij de belastingdienst, hierover is er op milieucentraal.nl een sss	eenvoudige stappenplan zelf kan doen maar dit vereist wel dat je jezelf aanmeld als a	ondernemer. Ook zijn er genoeg kleine bedrijven die dit al te graag voor je willen  a a	doen, voor 100 a 150 euro. Iedereen kan dit zelf dus wij gaan ervanuit dat dit ook in a	uw geval lukt. (5.700  X 0,21) = €1.197,-</p>
-        
-        <h3>Zonne-Energie</h3>
+        <h2>Zonne-Energie</h2>
         <p>
 		Dan komen we nu aan bij de zonne-energie.  De hoeveelheid zonne-energie wordt bepaald door de hoek van de paneel, Het vermogen, welke kant het paneel naar wijst (waarbij zuid het best is), het soort paneel (in dit geval een monokristallijn paneel) en de hoeveelheid van de panelen, In dit geval 12.
 		Voor deze berekening gaan we ervan uit dat we een plat dak hebben waar de zonnepanelen schuin richting het zuiden staan.
@@ -134,18 +126,17 @@
         <br><br>
         En stel je had €5.700,- op een deposito gezet dan had je maar  €9.351,45
         </p>
-        <h3>Bronnen:</h3>
+        <h2>Bronnen:</h2>
         <ul class="ul">
             <li><a href="https://www.consumentenbond.nl/zonnepanelen/kiezen?icmp=primarybutton_dossierhome_zonnepanelen_bekijk%20het%20koopadvies">Consumentenbond Zonnepanelen</a></li>
             <li><a href="https://www.spaarrente.nl/spaardeposito.aspx?spaarvorm=spaardeposito">Spaardeposito rente</a></li>
             <li><a href="https://degroenebron.nl/blog/waardestijging-eigen-huis-door-zonnepanelen">Huis-Waardestijging</a></li>
         </ul>
-	</div>
     </main>
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Gianni, Marloes, Anne Fleur en Oscar</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
