--- a/toekomst/index.html
+++ b/toekomst/index.html
@@ -47,36 +47,29 @@
                     <span>Conclusie</span>
                 </li>
             </a>
-            <a href="">
-                <li id="float-right">
-                    <span>Contact</span>
-                </li>
-            </a>
         </ul>
     </nav>
     <main id="content">
-		<div id="tekst">
-			<h2> Toekomstverwachting </h2><p>
-			De toekomstverwachting van zonne-energie 
-			De toekomst van zonne-energie zit er rooskleurig uit. Zonnepanelen worden dus steeds rendabeler. Nu halen we ongeveer 20 procent van de energie uit zonnepanelen maar in 2030 is de schatting gedaan dat dat verdriedubbeld keer is.
-			<br><br>
-			Er gaan ook stappen worden gezet door de zonne- energiesector. Ze willen in de toekomst dat zonnepanelen duurzamer worden en de prijs van de zonnepanelen nog zal blijf dalen. Dan krijgen we dus zonnepanelen die nog goedkoper zijn, waardoor je sneller je investering terug hebt. 
-			Zonne-energie en andere groene energie zullen ook toekomst zijn. Dat  wil zeggen dat we in 2030 bijna geen fossiele brandstof meer zullen hebben en niet meer willen gebruiken. Waarom we dat niet willen gebruiken is omdat de aarde al zo snel opwarmt en we in de toekomst ons steeds bewuster van gaan worden dat het niet meer langer zo kan. 
-			<br>Dus de zonne-energie en andere groene energie gaan de toekomst worden !			
-			Zonne-energie auto’s
-			</p>
-			<h2> Bij voertuigen </h2>
-			<p>
-			De zonne-energie gaat zich ook uitbreiden tot betrekking van auto’s. Er zijn nu wel al zonnewagens. Maar dat kun je geen auto’s noemen. 
-			Er worden wel met deze zonnewagen races georganiseerd om het onderzoek naar zonne-energie te stimuleren. Een van de bekendste races is de World Solar Challenge en American Solar Challenge.
-			<br><br>
-			Nu even terug komen op de toekomst. De toekomst van auto op zonne-energie willen ze wel realiseren een bekend auto merk Tesla wil graag auto’s in de toekomst op zonne-energie laten werken.  Maar Lightyear is er al mee bezig om in 2019 de eerste gezinsauto op zonne-energie. Die zich voornamelijk met alleen zonlicht zich oplaad en dan af en toe nog met stroom. Het streven voor de toekomst is dat die helemaal zich kan opladen door de zonnepanelen. 
-			</p>
+        <h1>Toekomstverwachting</h1><p>
+        De toekomst van zonne-energie zit er rooskleurig uit. Zonnepanelen worden dus steeds rendabeler. Nu halen we ongeveer 20 procent van de energie uit zonnepanelen maar in 2030 is de schatting gedaan dat dat verdriedubbeld keer is.
+        <br><br>
+        Er gaan ook stappen worden gezet door de zonne- energiesector. Ze willen in de toekomst dat zonnepanelen duurzamer worden en de prijs van de zonnepanelen nog zal blijf dalen. Dan krijgen we dus zonnepanelen die nog goedkoper zijn, waardoor je sneller je investering terug hebt. 
+        Zonne-energie en andere groene energie zullen ook toekomst zijn. Dat  wil zeggen dat we in 2030 bijna geen fossiele brandstof meer zullen hebben en niet meer willen gebruiken. Waarom we dat niet willen gebruiken is omdat de aarde al zo snel opwarmt en we in de toekomst ons steeds bewuster van gaan worden dat het niet meer langer zo kan. 
+        <br>Dus de zonne-energie en andere groene energie gaan de toekomst worden !			
+        Zonne-energie auto’s
+        </p>
+        <h2>Bij voertuigen</h2>
+        <p>
+        De zonne-energie gaat zich ook uitbreiden tot betrekking van auto’s. Er zijn nu wel al zonnewagens. Maar dat kun je geen auto’s noemen. 
+        Er worden wel met deze zonnewagen races georganiseerd om het onderzoek naar zonne-energie te stimuleren. Een van de bekendste races is de World Solar Challenge en American Solar Challenge.
+        <br><br>
+        Nu even terug komen op de toekomst. De toekomst van auto op zonne-energie willen ze wel realiseren een bekend auto merk Tesla wil graag auto’s in de toekomst op zonne-energie laten werken.  Maar Lightyear is er al mee bezig om in 2019 de eerste gezinsauto op zonne-energie. Die zich voornamelijk met alleen zonlicht zich oplaad en dan af en toe nog met stroom. Het streven voor de toekomst is dat die helemaal zich kan opladen door de zonnepanelen. 
+        </p>
     </main>
     <footer id="footer">
         <div id="developer-info">
             <span>Copyright</span>
-            <a href="">Naam</a>
+            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
             <span>2018</span>
         </div>
     </footer>
