fixed footer text

--- a/buitenland/index.html
+++ b/buitenland/index.html
@@ -95,9 +95,7 @@
     </main>
     <footer id="footer">
         <div id="developer-info">
-            <span>Copyright</span>
-            <a href="http://www.oscarrijpstra.nl/">Gianni, Marloes en Anne Fleur met hulp van Oscar Rijpstra</a>
-            <span>2018</span>
+            <span>Copyright Gianni, Marloes en Anne Fleur met hulp van <a href="http://www.oscarrijpstra.nl/">Oscar Rijpstra</a> 2018</span>
         </div>
     </footer>
 </body>
