repositioned the sun

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 		</p>
         <div id="cur-sun-energie">
             <h2>Huidige opbrengst</h2>
+            <img id="sun" src="img/sun.png">
             <img id="solarp" src="img/solarpanel.png">
             <span id="current-sun"></span>
             <span id="current-price"></span>
